# mlops-fraud-detection-

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
airflow/dags/: fraud_train_dag.py
api/: .dockerignore  Dockerfile
api/app/: config.py  main.py
api/app/routers/: health.py  predict.py
api/app/schemas/: request.py  response.py
api/app/services/: model_loader.py  predictor.py
api/tests/: conftest.py  test_contract.py
data/sample/: paysim_sample_1k.csv
drift/: Dockerfile  alert.py  monitor.py  retrain_trigger.py
infra/terraform/: main.tf  outputs.tf  variables.tf
mlflow/: Dockerfile  entrypoint.sh
notebooks/: 00_eda.ipynb  00_eda_executed.ipynb  01_threshold_selection.ipynb
scripts/: check_model_contract.py  download_data.sh  make_sample.py  seed_postgres.py
training/: evaluate.py  train.py
training/features/: pandas_pipeline.py  spark_pipeline.py
training/models/: baseline.py  dnn_model.py  lgbm_model.py  xgboost_model.py
