[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "training*", "drift*"]

[project]
name = "fraud-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "imbalanced-learn>=0.12",
    "pandas>=2.2",
    "numpy>=1.26",
    "mlflow>=2.13",
    "evidently>=0.4",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "ipykernel>=6.29",
]
spark = [
    "pyspark>=3.5",
]
tf = [
    "tensorflow>=2.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["api/tests", "training/tests"]
asyncio_mode = "auto"
